# beyond

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: beyond.rb
crates/beyonder-acp/: Cargo.toml
crates/beyonder-acp/src/: client.rs
crates/beyonder-config/: Cargo.toml
crates/beyonder-config/src/: config.rs  lib.rs
crates/beyonder-core/: Cargo.toml
crates/beyonder-core/src/: agent.rs  capability.rs  tui.rs
crates/beyonder-gpu/: Cargo.toml
crates/beyonder-gpu/src/: pipeline.rs  renderer.rs  viewport.rs
crates/beyonder-gpu/src/block_renderers/: approval.rs  mod.rs  shell_block.rs
crates/beyonder-remote/: Cargo.toml
crates/beyonder-remote/benches/: protocol_bench.rs
crates/beyonder-remote/src/: lib.rs  mdns.rs  pairing.rs  protocol.rs  server.rs  transport.rs
crates/beyonder-runtime/: Cargo.toml
crates/beyonder-runtime/src/: capability_broker.rs  supervisor.rs
crates/beyonder-runtime/src/provider/: mod.rs  ollama.rs  openai_compat.rs
crates/beyonder-store/: Cargo.toml
crates/beyonder-terminal/: Cargo.toml
crates/beyonder-terminal/src/: block_builder.rs  pty.rs  shell_hooks.rs
crates/beyonder-ui/: Cargo.toml
crates/beyonder-ui/src/: app.rs  commands.rs  input_editor.rs
scripts/: publish.sh
src/: main.rs
