[workspace]
members = [
    ".",
    "crates/beyonder-core",
    "crates/beyonder-store",
    "crates/beyonder-terminal",
    "crates/beyonder-acp",
    "crates/beyonder-runtime",
    "crates/beyonder-gpu",
    "crates/beyonder-ui",
    "crates/beyonder-config",
    "crates/beyonder-remote",
]
resolver = "2"

[package]
name = "beyondtty"
version.workspace = true
edition.workspace = true
description = "AI-native terminal with block-oriented model and GPU-accelerated rendering"
homepage = "https://github.com/PewterZz/Beyond"
repository = "https://github.com/PewterZz/Beyond"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["terminal", "ai", "gpu", "wgpu", "agent"]
categories = ["command-line-utilities", "graphics"]
exclude = ["assets/", "Formula/", "run*.log", ".claude/"]

[[bin]]
name = "beyondtty"
path = "src/main.rs"

[[bin]]
name = "beyonder"
path = "src/main.rs"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Beyonder Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/PewterZz/Beyond"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Terminal
portable-pty = "0.8"
alacritty_terminal = "0.26"

# GPU / Windowing
wgpu = "24"
winit = "0.30"
glyphon = "0.8"

# Config
toml = "0.8"
notify = "6"

# Protocol
bytes = "1"
regex = "1"
zstd = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }

# HTTP client (Ollama provider)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Clipboard
arboard = "3"
base64 = "0.22"

# Open URLs in default browser (OSC 8 hyperlink clicks)
open = "5"

# Image decoding (app icon)
image = { version = "0.25", default-features = false, features = ["png"] }

# Internal crates
beyonder-core = { path = "crates/beyonder-core", version = "0.1.0" }
beyonder-store = { path = "crates/beyonder-store", version = "0.1.0" }
beyonder-terminal = { path = "crates/beyonder-terminal", version = "0.1.0" }
beyonder-acp = { path = "crates/beyonder-acp", version = "0.1.0" }
beyonder-runtime = { path = "crates/beyonder-runtime", version = "0.1.0" }
beyonder-gpu = { path = "crates/beyonder-gpu", version = "0.1.0" }
beyonder-ui = { path = "crates/beyonder-ui", version = "0.1.0" }
beyonder-config = { path = "crates/beyonder-config", version = "0.1.0" }
beyonder-remote = { path = "crates/beyonder-remote", version = "0.1.0" }

[dependencies]
beyonder-ui = { workspace = true }
beyonder-config = { workspace = true }
winit = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
