[package]
name = "beyonder-acp"
version.workspace = true
edition.workspace = true
description = "Agent Client Protocol for the Beyond terminal"
license.workspace = true
repository.workspace = true

[dependencies]
beyonder-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
