[package]
name = "beyonder-config"
version.workspace = true
edition.workspace = true
description = "Configuration loader for the Beyond terminal"
license.workspace = true
repository.workspace = true

[dependencies]
beyonder-core = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs-next = "2"
