[package]
name = "beyonder-core"
version.workspace = true
edition.workspace = true
description = "Core data model for the Beyond AI-native terminal"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
