[package]
name = "beyonder-remote"
version.workspace = true
edition.workspace = true
description = "Remote pairing and transport for the Beyond terminal"
license.workspace = true
repository.workspace = true

[dependencies]
beyonder-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = "0.2"
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
mdns-sd = "0.11"
qrcode = { version = "0.14", default-features = false }
rand = "0.8"
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "protocol_bench"
harness = false
