[package]
name = "beyonder-store"
version.workspace = true
edition.workspace = true
description = "SQLite persistence layer for the Beyond terminal"
license.workspace = true
repository.workspace = true

[dependencies]
beyonder-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
