[package]
name = "beyonder-terminal"
version.workspace = true
edition.workspace = true
description = "PTY management and terminal emulation for Beyond"
license.workspace = true
repository.workspace = true

[dependencies]
beyonder-core = { workspace = true }
beyonder-store = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
alacritty_terminal.workspace = true
