[package]
name = "beyonder-ui"
version.workspace = true
edition.workspace = true
description = "Application wiring and input handling for Beyond"
license.workspace = true
repository.workspace = true

[dependencies]
beyonder-core = { workspace = true }
beyonder-acp = { workspace = true }
beyonder-gpu = { workspace = true }
beyonder-runtime = { workspace = true }
beyonder-terminal = { workspace = true }
beyonder-store = { workspace = true }
beyonder-config = { workspace = true }
beyonder-remote = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
